<resources>
    <string name="app_name">GamesFinder</string>
    <string name="name_of_title">Grand Theft Auto V</string>
    <string name="developer">Developer: Rockstar North</string>
    <string name="date_of_release">Date of release: 17.09.2013</string>
    <string name="meta_score">Metascore: 97</string>
    <string name="gamers_score">Gamers score: 8.3</string>
    <string name="poster_description">poster</string>
    <string name="description">About: Rockstar Games went bigger, since their previous installment of the series. You get the complicated and realistic world-building from Liberty City of GTA4 in the setting of lively and diverse Los Santos, from an old fan favorite GTA San Andreas. 561 different vehicles (including every transport you can operate) and the amount is rising with every update.
Simultaneous storytelling from three unique perspectives:
Follow Michael, ex-criminal living his life of leisure away from the past, Franklin, a kid that seeks the better future, and Trevor, the exact past Michael is trying to run away from.
GTA Online will provide a lot of additional challenge even for the experienced players, coming fresh from the story mode. Now you will have other players around that can help you just as likely as ruin your mission. Every GTA mechanic up to date can be experienced by players through the unique customizable character, and community content paired with the leveling system tends to keep everyone busy and engaged.</string>
    <string name="search_bar">Search</string>
    <string name="most_popular_action">Most popular action</string>
    <string name="most_popular_rpg">Most popular RPG</string>
    <string name="most_popular_shooter">Most popular shooter</string>
    <string name="genre">Genre: Action</string>
    <string name="most_popular_genres">Most popular genres</string>
    <string name="hint">Search game</string>
</resources>