<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/poster"
        android:layout_width="150dp"
        android:layout_height="180dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:src="@drawable/gta_pic"
        android:contentDescription="@string/poster_description" />

    <TextView
        android:id="@+id/name_of_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/poster"
        android:text="@string/name_of_game"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:paddingStart="2dp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/developer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name_of_title"
        app:layout_constraintLeft_toRightOf="@id/poster"
        android:text="@string/developer"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:paddingStart="2dp"
        tools:ignore="RtlSymmetry" />
    <TextView
        android:id="@+id/date_of_release"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/developer"
        app:layout_constraintLeft_toRightOf="@id/poster"
        android:text="@string/date_of_release"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:paddingStart="2dp"
        tools:ignore="RtlSymmetry" />
    <TextView
        android:id="@+id/genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/date_of_release"
        app:layout_constraintLeft_toRightOf="@id/poster"
        android:text="@string/genre"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:paddingStart="2dp"/>


    <TextView
        android:id="@+id/meta_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/genre"
        app:layout_constraintLeft_toRightOf="@id/poster"
        android:text="@string/meta_score"
        android:paddingStart="2dp"
        tools:ignore="RtlSymmetry" />
    <TextView
        android:id="@+id/gamers_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/meta_score"
        app:layout_constraintLeft_toRightOf="@id/poster"
        android:text="@string/gamers_score"
        android:paddingStart="2dp"
        tools:ignore="RtlSymmetry" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/poster"
        app:layout_constraintLeft_toRightOf="@id/poster"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:paddingStart="2dp"
        tools:ignore="RtlSymmetry">

        <ImageView
            android:id="@+id/pc_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:src="@drawable/pc_logo"
            tools:ignore="MissingConstraints"
            android:paddingStart="10dp"/>
        <ImageView
            android:id="@+id/ps_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/pc_logo"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ps_logo"
            android:paddingStart="10dp"/>
        <ImageView
            android:id="@+id/xbox_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/ps_logo"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/xbox_logo"
            android:paddingStart="10dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/poster"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/description"
        tools:ignore="RtlSymmetry"/>




</androidx.constraintlayout.widget.ConstraintLayout>
