<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondaryColor"
    tools:context=".screens.title.GameDescriptionFragment">

    <ImageView
        android:id="@+id/poster"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:contentDescription="@string/poster_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_baseline_videogame_asset_24"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingTop="180dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/name_of_title"
                style="@style/TextAppearance.AppCompat.GeneralTextStyle.Header"
                android:text="@string/name_of_game"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/meta_score"
                style="@style/TextAppearance.AppCompat.GeneralTextStyle.TextStyleInCard"
                android:text="@string/meta_score"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name_of_title"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/genres"
                style="@style/TextAppearance.AppCompat.GeneralTextStyle.TextStyleInCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/genre"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/meta_score"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/date_of_release"
                style="@style/TextAppearance.AppCompat.GeneralTextStyle.TextStyleInCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/date_of_release"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/genres"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:id="@+id/pc_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:src="@drawable/pc_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/meta_score"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/ps_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:src="@drawable/ps_logo"
                app:layout_constraintEnd_toStartOf="@id/pc_logo"
                app:layout_constraintTop_toBottomOf="@id/meta_score" />

            <ImageView
                android:id="@+id/xbox_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:src="@drawable/xbox_logo"
                app:layout_constraintEnd_toStartOf="@id/ps_logo"
                app:layout_constraintTop_toBottomOf="@id/meta_score" />

            <TextView
                android:id="@+id/description"
                style="@style/TextAppearance.AppCompat.GeneralTextStyle.Description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/description"
                app:layout_constraintTop_toBottomOf="@id/date_of_release"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="RtlSymmetry"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>