<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:layout_marginBottom="8dp"
    android:layout_marginTop="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/field_name"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/field_poster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/poster_of_game"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:foregroundGravity="top"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.MediumComponent"
                android:layout_alignParentTop="true"/>

            <TextView
                android:id="@+id/meta_score"
                style="@style/TextAppearance.AppCompat.GeneralTextStyle.TextStyleInCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meta_score"
                android:paddingTop="16dp"
                android:background="@color/highMetascore"/>
    </RelativeLayout>

        <TextView
            style="@style/TextAppearance.AppCompat.GeneralTextStyle.HeaderInCard"
            android:id="@+id/name_of_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_of_game"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/field_poster"/>

        <TextView
            style="@style/TextAppearance.AppCompat.GeneralTextStyle.TextStyleInCard"
            android:id="@+id/date_of_release"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_of_game"
            android:text="@string/date_of_release"/>

        <TextView
            style="@style/TextAppearance.AppCompat.GeneralTextStyle.TextStyleInCard"
            android:id="@+id/genre_of_game"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_of_release"
            android:text="@string/genre"
            android:maxLines="2"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>