<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <SearchView
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tag_most_popular_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_bar"
        android:text="@string/most_popular_action"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_most_popular_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tag_most_popular_action"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"
        android:paddingBottom="10dp"/>

    <TextView
        android:id="@+id/most_popular_rpg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recycler_most_popular_action"
        android:text="@string/most_popular_rpg"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_most_popular_rpg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/most_popular_rpg"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"
        android:paddingBottom="10dp"/>

    <TextView
        android:id="@+id/most_popular_shooter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recycler_most_popular_rpg"
        android:text="@string/most_popular_shooter"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_most_popular_shooter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/most_popular_shooter"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"
        android:paddingBottom="10dp"/>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>